...
                workoutName: "Squats",
                presentingAccount: .constant(false),
                selectedWeek: 1,
                selectedDay: 1
            ),
            title: "Squats",
            video: "squats"
        ),
        MenuItem(
            view: WorkoutInputForm(
                workoutName: "Row",
                presentingAccount: .constant(false),
                selectedWeek: 1,
...
